--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,45 +1,43 @@
-.onas{
-    display: grid;
-    height: 100vh;
-    align-content: stretch;
-    grid-template-columns: 9rem 2fr 1fr 1fr 5%;
-    grid-template-rows: 68px 1fr 1fr;
+.onas {
+  display: grid;
+  height: 100vh;
+  align-content: stretch;
+  grid-template-columns: 9rem 2fr 1fr 1fr 5%;
+  grid-template-rows: 68px 1fr 1fr;
 
-    h2{
-        grid-row: 2/3;
-       grid-column: 2/3;
-       align-self: flex-end;
-       justify-self: flex-start;
-       margin-left: 5rem;
-       margin-bottom: 15rem;
-    }
-    p{
-        grid-row: 3/4;
-        grid-column: 2/4;
-        align-self: flex-start;
-        justify-self: flex-start;
-        margin-left:8rem;
-        margin-top:3rem
-    } 
-       
+  h2 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    align-self: flex-end;
+    justify-self: flex-start;
+    margin-left: 5rem;
+    margin-bottom: 15rem;
+  }
+  p {
+    grid-row: 3/4;
+    grid-column: 2/4;
+    align-self: flex-start;
+    justify-self: flex-start;
+    margin-left: 8rem;
+    margin-top: 3rem;
+  }
 
-    .pike{
-        grid-row:2/3;
-        grid-column: 2/4;
-        align-self: flex-end;
-        justify-self: flex-start;
-        position: relative;
-        left: 6rem;
-        top:-15rem;
-        .homedot {
-            margin: 0 20px 0 0; 
-            height: 15px;
-            width: 15px;
-            background-color: red;
-            border-radius: 50%;
-            display: inline-block;
-            z-index: 50;
-          }
-    
+  .pike {
+    grid-row: 2/3;
+    grid-column: 2/4;
+    align-self: flex-end;
+    justify-self: flex-start;
+    position: relative;
+    left: 6rem;
+    top: -15rem;
+    .homedot {
+      margin: 0 20px 0 0;
+      height: 15px;
+      width: 15px;
+      background-color: red;
+      border-radius: 50%;
+      display: inline-block;
+      z-index: 50;
     }
+  }
 }
